test-cases/negative/test_079_method_call_missing_dot.lay
# negative test: method call syntax without dot operator
# expected: parser should reject this

the variable person of type Person is a new Person with
  name is 'John'

call person getName


